--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 .box {
   width: 10vw;
   margin: auto;
-  margin-bottom: 20px;
+  margin-top: 70px;
   padding: 20px;
   border: 1px solid white;
 }
