--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,13 @@ body {
 }
 .App {
   position: relative;
-  width: 60%;
+  width: 60vw;
 
-  padding: 100px;
   margin: auto;
 }
 .header {
   display: flex;
+  margin-top: 100px;
   justify-content: space-around;
   text-align: center;
   border-radius: 10px 10px 0px 0px;
@@ -34,14 +34,17 @@ body {
   justify-content: space-between;
   width: 17%;
 }
-.box {
+.player {
   display: flex;
-  flex-direction: column;
+  padding: 10px 120px 10px 120px;
   justify-content: space-between;
   align-content: space-between;
-
+  border: #94d2bd 1px solid;
   background-color: #e9d8a6;
+  font-weight: 600;
+  font-size: large;
 }
+
 .boxBG {
   display: flex;
   justify-content: space-between;
@@ -55,9 +58,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  padding-left: 150px;
-  padding-right: 90px;
+  padding: 10px 100px 10px 120px;
   background-color: #94d2bd;
   border-top: 3px solid #e9d8a6;
 }
@@ -69,16 +70,7 @@ body {
   font-weight: 600;
   margin-right: 46px;
 }
-.data {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-content: space-between;
-  border: 2px solid #94d2bd;
-  padding-left: 150px;
-  padding-right: 90px;
-}
+
 .data p {
   font-weight: 700;
   font-size: large;
@@ -92,5 +84,6 @@ body {
 }
 .inner {
   display: flex;
-  width: 25%;
+  width: 100px;
+  justify-content: space-between;
 }
